<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.dribblers.fragments.HomeFragment"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image_training_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/llTabs"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/background_nav_type_training">

        <TextView
            android:id="@+id/freeTrainingTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/free_training"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/basicTrainingTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/basic_training"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorGray"/>
        <TextView
            android:id="@+id/advancedTrainingTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/advanced_training"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorGray"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llTabs"
        android:layout_above="@+id/buttonStartRelativeLayout">
        <TextView
            android:id="@+id/titleTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            android:text="@string/type_title"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            android:textAllCaps="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/buttonStartRelativeLayout"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_start_button"
        android:layout_marginBottom="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Comenzar"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold|italic"/>
    </RelativeLayout>



</RelativeLayout>