<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.dribblers.activities.EventActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryText"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="@string/event_name" />

        <TextView
            android:id="@+id/textViewEventPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/event_place" />

        <TextView
            android:id="@+id/textViewEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/event_date" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:background="@drawable/circle_button"
            android:id="@+id/joinBTN"
            android:text="Join"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="-10dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="right"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/eventRecyclerView">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
