<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.dribblers.activities.AddEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryText"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="@dimen/default_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:layout_marginLeft="@dimen/text_view_margin_left"
            android:text="@string/event_name"/>
        <EditText
            android:id="@+id/editTextEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_margin_left"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:text="@string/event_place"/>
        <EditText
            android:id="@+id/editTextEventPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_view_margin_left"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:text="@string/event_date"/>
        <EditText
            android:id="@+id/editTextEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:gravity="center">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_margin="@dimen/default_margin"
            android:id="@+id/cancelEventBTN" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_check_black_24dp"
            android:layout_margin="@dimen/default_margin"
            android:id="@+id/createEventBTN" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
