<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/fragmentChronometer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             android:background="@android:color/black"
             tools:context="pe.edu.upc.dribblers.fragments.ChronometerFragment">
   <TextView
       android:id="@+id/idChronometer"
       android:layout_width="match_parent"
       android:layout_height="170dp"
       android:textColor="@android:color/white"
       android:gravity="center_horizontal"
       android:textSize="@dimen/chronometer_count_text_size"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_marginTop="20dp">
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:src="@drawable/ic_check"
          android:tint="@android:color/white"
          android:textSize="@dimen/chronometer_score_text_size"
          android:gravity="center_horizontal"/>
      <ImageView
          android:layout_width="wrap_content"
          android:layout_weight="0.5"
          android:tint="@android:color/white"
          android:textSize="@dimen/chronometer_score_text_size"
          android:gravity="center_horizontal"
          android:layout_height="wrap_content"
         android:src="@drawable/ic_fail"/>

   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="40dp">
      <TextView
          android:id="@+id/idSuccesTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:textColor="@android:color/white"
          android:textSize="@dimen/chronometer_score_text_size"
          android:gravity="center_horizontal"
          android:text="@string/chronometer_score_succes"/>
      <TextView
          android:id="@+id/idFailTextView"
          android:layout_width="wrap_content"
          android:layout_weight="0.5"
          android:textSize="@dimen/chronometer_score_text_size"
          android:textColor="@android:color/white"
          android:gravity="center_horizontal"
          android:layout_height="wrap_content"
          android:text="@string/chronometer_score_fail"/>

   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="90dp"
       android:layout_marginTop="30dp">
   <ImageButton
       android:id="@+id/succesImageButton"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/ic_check"
       android:layout_margin="5dp"
       android:layout_weight="0.5"
       android:background="@android:color/holo_green_dark"
       />
   <ImageButton
       android:id="@+id/failImageButton"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="0.5"
       android:layout_margin="5dp"
       android:src="@drawable/ic_fail"
       android:background="@android:color/holo_red_dark"/>
   </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <Button
       android:id="@+id/idStopButton"
       android:layout_width="300dp"
       android:layout_height="100dp"
       android:text="@string/chronemter_stop"
       android:gravity="center"
       android:textAlignment="gravity"
       android:layout_gravity="center_vertical|center_horizontal"
       android:layout_centerInParent="true"
       />
</RelativeLayout>
</LinearLayout>